--- a/contacto.html
+++ b/contacto.html
@@ -74,7 +74,7 @@
                     <br />
                     <textarea name="" id="" cols="30" rows="10" placeholder="Mensaje..."></textarea>
                     <br />
-                    <input type="submit" placeholder="Enviar" />
+                    <button>Enviar</button>
                 </form>
             </div>
         </section>
